# TechDD

./: .gitignore  README.md  pyproject.toml
.gstack/: browse-audit.jsonl
docs/superpowers/plans/: 2026-07-01-acquirescope-engine-core.md  2026-07-01-acquirescope-phase2-financial-bridge.md  2026-07-01-acquirescope-phase3-security-delivery-narrative.md  2026-07-03-acquirescope-disposition-workflow.md  2026-07-03-acquirescope-interview-questions.md  2026-07-06-repo-health-panel-pipeline.md
docs/superpowers/specs/: 2026-07-01-acquirescope-design.md  2026-07-01-acquirescope-phase2-financial-bridge-design.md  2026-07-01-acquirescope-phase3-security-delivery-narrative-design.md  2026-07-01-earningsdesk-design.md  2026-07-03-acquirescope-disposition-workflow-design.md  2026-07-03-acquirescope-interview-questions-design.md  2026-07-06-repo-health-pricing-panel-study-design.md
examples/: assumptions.example.toml
src/acquirescope/: cli.py  dispositions.py  excel.py  ingest.py  interview_questions.py  models.py  narrative.py  report.py
src/acquirescope/bridge/: adjustments.py  assumptions.py  valuation.py
src/git_due_diligence/: cli.py  dispositions.py  excel.py  ingest.py  interview_questions.py  narrative.py  report.py
tests/: conftest.py  test_adjustments.py  test_assumptions.py  test_bus_factor.py  test_cli.py  test_delivery.py  test_dispositions.py  test_excel.py  test_fixture.py  test_hotspots.py  test_ingest.py  test_interview_questions.py  test_licenses.py  test_models.py  test_narrative.py  test_report.py  test_security.py  test_valuation.py
(+12 files in other folders)
