[project]
name = "acquirescope"
version = "0.1.0"
description = "Technical due diligence engine for git repositories"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "lizard>=1.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
acquirescope = "acquirescope.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
